# stealthfetch

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: async_usage.py  basic_usage.py  browser_mode.py  mcp_config.json
skill/: SKILL.md  reference.md
src/stealthfetch/: __init__.py  _compat.py  _core.py  _detect.py  _errors.py  cli.py  mcp_server.py
src/stealthfetch/_browsers/: __init__.py  _camoufox.py  _constants.py  _patchright.py
tests/: conftest.py  test_browsers.py  test_cli.py  test_compat.py  test_convert.py  test_core.py  test_detect.py  test_extract.py  test_mcp.py  test_validation.py
tests/fixtures/: article.html  captcha.html  cloudflare_block.html  reddit_challenge.html  tables.html
tests/integration/: conftest.py  test_live.py
