[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stealthfetch"
version = "0.1.0"
description = "URL in, LLM-ready markdown out. Stealth fetch with anti-bot bypass."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "leba01" }]
keywords = ["scraping", "markdown", "llm", "stealth", "anti-bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "curl_cffi>=0.14.0",
    "trafilatura>=1.8.0",
    "html-to-markdown>=2.25.0",
]

[project.optional-dependencies]
camoufox = ["camoufox[geoip]>=0.4.11"]
patchright = ["patchright>=1.50"]
browser = [
    "camoufox[geoip]>=0.4.11",
    "patchright>=1.50",
]
mcp = ["mcp>=1.26.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
    "mypy>=1.13",
]

[project.scripts]
stealthfetch = "stealthfetch.cli:main"
stealthfetch-mcp = "stealthfetch.mcp_server:main"

[project.urls]
Homepage = "https://github.com/leba01/stealthfetch"
Repository = "https://github.com/leba01/stealthfetch"
Issues = "https://github.com/leba01/stealthfetch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stealthfetch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF", "PERF", "LOG"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "camoufox",
    "camoufox.*",
    "patchright",
    "patchright.*",
    "mcp",
    "mcp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "stealthfetch._browsers._camoufox",
    "stealthfetch._browsers._patchright",
]
warn_unused_ignores = false
